Routeguard for API (#52)
* Attempt test role access.

* Add extra annotation.

* Add test for correct role.

* Add tests for each endpoint.

* Attempt fix Java issue.

* Lint.

* Use special test user name for not auditing.

* Revert Java version.

* Remove skipAudit parameter.

* Clean-up.

* Lint.

* Add option for ROLE_SAR_DATA_ACCESS.